# vesci

./: .gitignore  README.md  pyproject.toml  vesci_switch_venv
tests/: conftest.py  test_vesci.py
tests/fixtures/: pyvenv.cfg
tests/fixtures/envs/feature/: pyproject.toml
tests/fixtures/envs/main/: pyproject.toml
vesci/: vesci.py
